--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,5 @@ version=0.1.2
 platformType=IU
 platformVersion=202.6397.94
 pluginSinceBuild=202.6397
+pluginUntilBuild=222.*
 kotlin.code.style=official
